# sonoma-search

./: .dockerignore  .env  .gitignore  Cargo.toml  PORTS.md  README.md  docker-compose.yml  info_for_servers.txt  prometheus.yml
.github/workflows/: ci-cd.yml  crawler-ci-cd.yml  deploy-all.yml
.sqlx/: query-156a0cc02f2ed50afcfbc4e0cc7e9ca4e83cf313450186db3acc8bb1ed015a0d.json  query-48aca6596d5286eb38d9521e32fb0e67460bbefe883b1275f58f97cd588d804b.json  query-4d94daf0c6ae9d16948d36626c8f3da9fc2e29763bc98d3d0e87f466b427d7f7.json  query-4f4c27defc1a2ed04a7adde92dc3f6a537c2888ab9d517a11f48799ce52d5212.json  query-5d3e884789156eb42b39be55ffcabe473ac81bb52f14eff23ad89ee3fcf416bd.json  query-71d7aba002e36a1f15f29687424f4949339fbe8fbf0d268407e93a2dc7bf1b82.json  query-90b6ce4359c8dc6be2543fec49e275d23ea7f19d9c3895ee485284b4b6d8588b.json  query-9be50fe4fc8cc20bc663c781d032f6fa685754fb35dbabcd28dafbf8f85792af.json  query-a2ff25840c10de3c87efcd8d4fff3059cca402d9360631fccd7bdd498777332e.json  query-ad86c891ce24f3034d72448b430759b269a08e4a4642d749e02d8466785f9390.json  query-b0129d6532eecbd42a4436bcad55d97d710d3f28da5082c38e1db65e5e983a7c.json  query-e292717e25f11acfcb4c46c24e89aa4f8bb3815d3fa7c1ef418309abe1a44981.json  query-f1197a503cec5698f3d57f79eaa2a09aee6b99ccaedd87bbaaa5f99040392d42.json
config/prometheus/: prometheus.yml
config/rabbitmq/: rabbitmq.conf
crawled_pages/: account.icann.html  aso.icann.html  atlarge.icann.html  ccnso.icann.html  gac.icann.html  gnso.icann.html  learn.icann.html  lists.icann.org__postorius_lists_root-dnssec-announce.icann.html  meetings.icann.html  newgtldprogram.icann.html  rdrs.icann.html  subscribe.icann.html  whois.icann.html  www.afrinic.html  www.apnic.html  www.arin.html  www.efqm.html  www.facebook.html  www.flickr.html  www.iana.html  www.iana.org__cgi-bin_intreg_intreg.html  www.iana.org__domains_root_db_xn--11b5bs3a9aj6g.html  www.iana.org__domains_root_db_xn--80akhbyknj4f.html  www.iana.org__domains_root_db_xn--9t4b11yi5a.html  www.iana.org__domains_root_db_xn--deba0ad.html  www.iana.org__domains_root_db_xn--g6w251d.html  www.iana.org__domains_root_db_xn--hlcj6aya9esc7a.html  www.iana.org__domains_root_db_xn--jxalpdlp.html  www.iana.org__domains_root_db_xn--kgbechtv.html  www.iana.org__domains_root_db_xn--zckzah.html  www.iana.org__procedures_idn-repository.html  www.iana.org__reports_2002_lacnic-report-07nov02.html  www.iana.org__reports_2005_afrinic-report-05aug2005.html  www.icann.html  www.icann.org__en_general_global-addressing-policies.html  www.icann.org__resources_registries_gtlds_v1_newgtlds.html  www.ietf.html  www.instagram.html  www.lacnic.html  www.linkedin.html  (+5 more)
crawler/: .dockerignore  Cargo.toml  Dockerfile  config.toml  output.html
crawler/.sqlx/: query-1c302201fef9d73b777090d6dabeb2f6f8afb003b3b2bb70868e932ab96b1fab.json  query-3e3c9a57543fd098d96c22152c21dd374dccc1ac0679cf25189aaa523b98e6b0.json  query-4f168615483127ef9214e9337fedb25df0d1eb5dc26ee48bbd8fd51aa122a48d.json  query-51775777663c54053b8436263f018b5b080aa0353e500d2d55c7ce9dcc791e6b.json  query-729761c6f847c9161a023f497313dda5d8d5523abc70351942ab87bbfb087d69.json  query-7dbcf0143e5f4cf0760ee07a145e4d4e5bee9c6190a281329b20c300d68a3f7f.json  query-7e41621a50b67591ec2d3f6826a9b68e285be30c46653b3a76079c778674ef1e.json  query-90efbc336423df9229f40bc1569575a664cec68171dd43442d3c18eac7c9c5ae.json  query-960858e284fc2ff4e59876de1a13855d96fff1af856476c7673f7ec316207610.json  query-b52a42af4564d3d7a63fd1d24156fb7f621279f5d85d4705c27c9720c3628011.json  query-b76032e551a3e08f90250d06b6dd11f177e9e296c78c1cca42defb64694d3a3c.json  query-cc2f8b21aa753b967c54c5187e5bf6fd0bc3eeb2d8134c51e9469cf41de335b1.json  query-d1651cf15c58e339f8c05b447957e32f280661e896d62456a93b4a1132ebc968.json  query-db16660e2ebf2d7e281272c6343c7d4208e2aa9e45ceb42c55d8d2e2c2cbfbc2.json
crawler/src/: config.rs  crawler.rs  fetcher.rs  main.rs  metrics.rs  parser.rs  robots.rs  storage.rs
deploy/docker/: docker-compose.prod.yml  docker-compose.yml
docs/: README.md
docs/architecture/: overview.md  tech-stack.md
docs/database/: elasticsearch.md  postgresql.md
docs/deployment/: ci-cd.md  deployment.md  docker-setup.md  environment.md
docs/development/: contributing.md  environment.md
docs/monitoring/: grafana.md  monitoring.md  overview.md  prometheus.md
docs/security/: security.md
docs/services/: api-gateway.md  crawler.md  indexer.md  ranker.md  storage.md  web-frontend.md
docs/troubleshooting/: troubleshooting.md
indexer/: .dockerignore  Cargo.toml  Dockerfile
indexer/src/: async_processor.rs  batch_processor.rs  config.rs  content_processing.rs  db_indexer.rs  document.rs  document_models.rs  elastic_search_storage.rs  error.rs  indexer.rs  lemmatization.py  main.rs  postgre_functions.rs  schema.rs  searcher.rs  storage.rs  tokenizer.rs
monitoring/: Cargo.toml  Dockerfile
monitoring/src/: main.rs  metrics.rs  server.rs
ranker/: Cargo.toml
ranker/src/: data_models.rs  main.rs  page_rank.rs  postgres_utilities.rs
scripts/: prepare-sqlx.sh
searcher/: Cargo.toml  concepts_information.txt
searcher/src/: bm25_es_searcher.rs  errors.rs  main.rs  postgres_storage.rs
security/: Cargo.toml
services/crawler/: Cargo.toml  Dockerfile  config.toml
services/crawler/src/: api.rs  config.rs  crawler.rs  error.rs  fetcher.rs  lib.rs  main.rs  metrics.rs  parser.rs  robots.rs  summarizer.rs
services/datastructures/: HashMap.rs  HashSet.rs  VecDeque.rs  Vector.rs
services/indexer/: Cargo.toml  Dockerfile
services/indexer/src/: error.rs  (+9 more)
services/ranker/: Cargo.toml  Dockerfile  concepts_information.txt
services/ranker/src/: display_rank.rs  main.rs  metrics.rs  page_rank.rs  postgres_utilities.rs
services/searcher/: Cargo.toml
services/searcher/src/: bm25_es_searcher.rs  errors.rs  main.rs  postgres_storage.rs
services/web/: .env.local  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
storage/: Cargo.toml
storage/src/: lib.rs  main.rs  models.rs  postgre.rs  schema.rs  storage.rs
storage/src/scripts/: init.sql
(+262 files in other folders)
