[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking", "cookies", "gzip"] }
tokio = { version = "1", features = ["full"] }
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
robotstxt = "0.3.0"
thiserror = "1.0.63"
url = "2.5.2"
rand = "0.9.0-alpha.2"
scraper = "0.20.0"
config = "0.14.0"
structopt = "0.3.26"
toml = "0.8.19"
sha2 = "0.11.0-pre.4"
chrono = "0.4.38"
hex = "0.4.3"