[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
elasticsearch = {version = "8.15.0-alpha.1"}
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0"
config = "0.14.0"
tracing = "0.1"
toml = "0.8.19"
structopt = "0.3.26"
futures = "0.3.30"
rayon = "1.10.0"
log = "0.4"
anyhow = "1.0"
env_logger = "0.11.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tokio-postgres = "0.7.12"
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-native-tls", "uuid"] }
scraper = "0.20.0"
stopwords = "0.1.1"
unicode-segmentation = "1.8"
rust-stemmers = "1.0"
regex = "1.5"
rand = "0.9.0-alpha.2"
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#[lib]
#crate-type = ["cdylib"]