[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
thiserror = "1.0.63"
tokio = "1.39.3"
serde_json = "1.0.125"
serde = { version = "1.0.209", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
chrono = { version = "0.4.38", features = ["serde"] }
url = "2.5.2"
