[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking", "cookies", "gzip"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
robotstxt = "0.3.0"
thiserror = "1.0.63"
url = "2.5.2"
rand = "0.9.0-alpha.2"
scraper = "0.20.0"
config = "0.14.0"
structopt = "0.3.26"
toml = "0.8.19"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
robotxt = "0.6.1"
http = "1.1.0"
lazy_static = "1.4"
dotenv = "0.15.0"
storage = { path = "../storage" }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "json", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
env_logger = "0.11.5"
actix-web = "4.0"
prometheus = "0.13"
urlencoding = "2.1.3"
