[package]
name = "ranker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-0_8"] }
postgres-types = { version = "0.2.5", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "v5"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
dotenv = "0.15.0"
serde_json = "1.0.132"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12.9", features = ["json"] }
actix-web = "4.0"
prometheus = "0.13"
lazy_static = "1.4"
