[package]
name = "searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
elasticsearch = {version = "8.15.0-alpha.1"}
thiserror = "2.0.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.132"
tokio = { version = "1.35", features = ["full"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11.5"
